--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,17 @@
     transform: rotate(360deg);
   }
 }
+
+h1 {
+  margin-top: 15rem;
+  font-size: 36px;
+}
+
+h1,
+h3 {
+  color: greenyellow;
+}
+
+h3 {
+  font-size: 24;
+}
